--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -42,146 +42,42 @@
     </div>
 </div>
 
-
-
- 
-<!-- Accordion Item 1 -->
-<div class="border-b border-slate-200">
-  <button onclick="toggleAccordion(1)" class="w-full flex justify-between items-center py-5 text-slate-800">
-    <span>What is Material Tailwind?</span>
-    <span id="icon-1" class="text-slate-800 transition-transform duration-300">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4">
-        <path d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z" />
-      </svg>
-    </span>
-  </button>
-  <div id="content-1" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
-    <div class="pb-5 text-sm text-slate-500">
-      Material Tailwind is a framework that enhances Tailwind CSS with additional styles and components.
+<div class="accordion">
+  <div class="accordion-item" id="item1">
+    <a href="#item1" class="accordion-header">Accordion Item 1</a>
+    <div class="accordion-content">
+      <p>This is the hidden content.</p>
     </div>
   </div>
 </div>
- 
-<!-- Accordion Item 2 -->
-<div class="border-b border-slate-200">
-  <button onclick="toggleAccordion(2)" class="w-full flex justify-between items-center py-5 text-slate-800">
-    <span>How to use Material Tailwind?</span>
-    <span id="icon-2" class="text-slate-800 transition-transform duration-300">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4">
-        <path d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z" />
-      </svg>
-    </span>
-  </button>
-  <div id="content-2" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
-    <div class="pb-5 text-sm text-slate-500">
-      You can use Material Tailwind by importing its components into your Tailwind CSS project.
+
+<div class="accordion">
+  <div class="accordion-item" id="item2">
+    <a href="#item2" class="accordion-header">Accordion Item 2</a>
+    <div class="accordion-content">
+      <p>This is the hidden content.</p>
     </div>
   </div>
 </div>
- 
-<!-- Accordion Item 3 -->
-<div class="border-b border-slate-200">
-  <button onclick="toggleAccordion(3)" class="w-full flex justify-between items-center py-5 text-slate-800">
-    <span>What can I do with Material Tailwind?</span>
-    <span id="icon-3" class="text-slate-800 transition-transform duration-300">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4">
-        <path d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z" />
-      </svg>
-    </span>
-  </button>
-  <div id="content-3" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
-    <div class="pb-5 text-sm text-slate-500">
-      Material Tailwind allows you to quickly build modern, responsive websites with a focus on design.
-    </div>
-  </div>
+
+
+<div class="accordion">
+  <details>
+    <summary>Accordion Item 1</summary>
+    <p>This is the content for item 1. It becomes visible when the user clicks the header.</p>
+  </details>
+
+  <details>
+    <summary>Accordion Item 2</summary>
+    <p>This is the content for item 2. You can place text, images, or any HTML here.</p>
+  </details>
+
+  <details>
+    <summary>Accordion Item 3</summary>
+    <p>This is the content for item 3. It collapses when the user clicks again.</p>
+  </details>
 </div>
- 
-<script>
-  function toggleAccordion(index) {
-    const content = document.getElementById(`content-${index}`);
-    const icon = document.getElementById(`icon-${index}`);
- 
-    // SVG for Minus icon
-    const minusSVG = `
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4">
-        <path d="M3.75 7.25a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5h-8.5Z" />
-      </svg>
-    `;
- 
-    // SVG for Plus icon
-    const plusSVG = `
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4">
-        <path d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z" />
-      </svg>
-    `;
- 
-    // Toggle the content's max-height for smooth opening and closing
-    if (content.style.maxHeight && content.style.maxHeight !== '0px') {
-      content.style.maxHeight = '0';
-      icon.innerHTML = plusSVG;
-    } else {
-      content.style.maxHeight = content.scrollHeight + 'px';
-      icon.innerHTML = minusSVG;
-    }
-  }
-</script>
 
-
-<div class="w-full max-w-2xl mx-auto border rounded-lg divide-y">
-  <!-- Item 1 -->
-  <div>
-    <input id="acc-1" name="accordion" type="radio" class="peer sr-only" checked>
-    <label for="acc-1"
-      class="flex items-center justify-between p-4 cursor-pointer select-none transition-colors
-             peer-checked:bg-blue-50 peer-checked:text-blue-700">
-      <span class="font-medium">Collection Policy</span>
-      <svg class="h-5 w-5 transition-transform peer-checked:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-      </svg>
-    </label>
-    <div class="overflow-hidden max-h-0 transition-[max-height] duration-300 peer-checked:max-h-[60vh]">
-      <div class="p-4 pt-0 text-sm text-gray-700">
-        Scope of collections, evaluation, and storage duration.
-      </div>
-    </div>
-  </div>
-
-  <!-- Item 2 -->
-  <div>
-    <input id="acc-2" name="accordion" type="radio" class="peer sr-only">
-    <label for="acc-2"
-      class="flex items-center justify-between p-4 cursor-pointer select-none transition-colors
-             peer-checked:bg-blue-50 peer-checked:text-blue-700">
-      <span class="font-medium">Deposition Agreement</span>
-      <svg class="h-5 w-5 transition-transform peer-checked:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-      </svg>
-    </label>
-    <div class="overflow-hidden max-h-0 transition-[max-height] duration-300 peer-checked:max-h-[60vh]">
-      <div class="p-4 pt-0 text-sm text-gray-700">
-        Legal agreement between ARCHE and depositors.
-      </div>
-    </div>
-  </div>
-
-  <!-- Item 3 -->
-  <div>
-    <input id="acc-3" name="accordion" type="radio" class="peer sr-only">
-    <label for="acc-3"
-      class="flex items-center justify-between p-4 cursor-pointer select-none transition-colors
-             peer-checked:bg-blue-50 peer-checked:text-blue-700">
-      <span class="font-medium">Filenames, Formats &amp; Metadata</span>
-      <svg class="h-5 w-5 transition-transform peer-checked:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-      </svg>
-    </label>
-    <div class="overflow-hidden max-h-0 transition-[max-height] duration-300 peer-checked:max-h-[60vh]">
-      <div class="p-4 pt-0 text-sm text-gray-700">
-        Prepare data correctly.
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
