--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -51,7 +51,7 @@
       class="flex items-center justify-between cursor-pointer p-4 select-none
              transition-colors open:bg-blue-50 open:text-blue-700
              [&::-webkit-details-marker]:hidden">
-      <span class="font-medium">Accordion Item 1</span>
+      <span class="font-medium">{{ element_2.accordion_1_title }}</span>
       <!-- chevron -->
       <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
@@ -59,7 +59,7 @@
     </summary>
     <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
       <div class="p-4 pt-0 text-sm text-gray-700">
-        This is the content for item 1. It becomes visible when the user clicks the header.
+        {{ element_2.accordion_1_body }}
       </div>
     </div>
   </details>
@@ -70,14 +70,14 @@
       class="flex items-center justify-between cursor-pointer p-4 select-none
              transition-colors open:bg-blue-50 open:text-blue-700
              [&::-webkit-details-marker]:hidden">
-      <span class="font-medium">Accordion Item 2</span>
+      <span class="font-medium">{{ element_2.accordion_2_title }}</span>
       <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
       </svg>
     </summary>
     <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
       <div class="p-4 pt-0 text-sm text-gray-700">
-        This is the content for item 2. You can place text, images, or any HTML here.
+        {{ element_2.accordion_2_body }}
       </div>
     </div>
   </details>
@@ -88,14 +88,14 @@
       class="flex items-center justify-between cursor-pointer p-4 select-none
              transition-colors open:bg-blue-50 open:text-blue-700
              [&::-webkit-details-marker]:hidden">
-      <span class="font-medium">Accordion Item 3</span>
+      <span class="font-medium">{{ element_2.accordion_3_title }}</span>
       <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
       </svg>
     </summary>
     <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
       <div class="p-4 pt-0 text-sm text-gray-700">
-        This is the content for item 3. It collapses when you open another item.
+        {{ element_2.accordion_3_body }}
       </div>
     </div>
   </details>
@@ -112,7 +112,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        {{ element_2.accordion_1_title }}
+                        accordion-header
                     </button>
                 </h2>
                 <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionDiv">
