--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -47,7 +47,7 @@
         <div class="col-span-4 col-start-2">
             <div class="w-full">
 
-                <div class="accordion w-full mx-auto divide-y rounded-lg border">
+                <div class="accordion-static w-full mx-auto divide-y rounded-lg border">
                     <!-- Item 1 -->
                     <details name="acc" class="group">
                         <summary
