--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -104,6 +104,23 @@
                             </div>
                         </div>
                     </details>
+                    
+                    <details name="acc" class="group">
+                        <summary
+                            class="flex items-center justify-between cursor-pointer p-4 select-none
+                            transition-colors open:bg-blue-50 open:text-blue-700
+                            [&::-webkit-details-marker]:hidden">
+                            <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                            <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                            </svg>
+                        </summary>
+                        <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                            <div class="p-4 pt-0 text-sm accordion-static-body">
+                                {{ element_2.accordion_4_body }}
+                            </div>
+                        </div>
+                    </details>
                 </div>
             </div>
 
@@ -112,64 +129,6 @@
 </div>
 
 
-
-
-
-
-<div class="container maxw-980 mt-5">
-    <div class="row gx-5 align-items-center justify-content-center">
-        <div class="accordion" id="accordionDiv">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        accordion-header
-                    </button>
-                </h2>
-                <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionDiv">
-                    <div class="accordion-body">
-                        {{ element_2.accordion_1_body }}
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        {{ element_2.accordion_2_title }}                                                                                                                                                                                                             </button>
-                </h2>
-                <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionDiv">
-                    <div class="accordion-body">
-                        {{ element_2.accordion_2_body }}
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        {{ element_2.accordion_3_title }}       
-                    </button>
-                </h2>
-                <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionDiv">
-                    <div class="accordion-body">
-                        {{ element_2.accordion_3_body }}
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        {{ element_2.accordion_4_title }}       
-                    </button>
-                </h2>
-                <div class="accordion-collapse collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionDiv">
-                    <div class="accordion-body">
-                        {{ element_2.accordion_4_body }}
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 <!-- ELEMENT 3 - BOX -->
