--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -189,7 +189,7 @@
 
 
 
-<div class="grid grid-cols-4 sm:grid-cols-2">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
     <div class="w-full ">
         <div class="h-full shadow bg-white flex flex-col border-0">
             <div class="h-full shadow bg-white flex flex-col border-0">
