--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -187,117 +187,12 @@
     </div>
 </div>
 
-
-
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-    <div class="w-full ">
-        <div class="h-full shadow bg-white flex flex-col border-0">
-            <div class="h-full shadow bg-white flex flex-col border-0">
-                <img
-                    class="card-img-top cards-static-images max-w-full h-auto"
-                    src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                    loading="lazy"
-                    />
-
-                <div class="card-body home-resources-body p-4 h-full">
-                    <h5 class="card-title mb-3">
-                        <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                    </h5>
-
-                    <p class="card-text home-resources-text text-left  h-full">
-                        {{ element_4.card_1_text }}
-                    </p>
-
-                    <!-- display: contents -->
-                    <p class="contents">
-                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="w-full ">
-        <div class="h-full shadow bg-white flex flex-col border-0">
-            <div class="h-full shadow bg-white flex flex-col border-0">
-                <img
-                    class="card-img-top cards-static-images max-w-full h-auto"
-                    src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                    loading="lazy"
-                    />
-
-                <div class="card-body home-resources-body p-4 h-full">
-                    <h5 class="card-title mb-3">
-                        <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                    </h5>
-
-                    <p class="card-text home-resources-text text-left  h-full">
-                        {{ element_4.card_1_text }}
-                    </p>
-
-                    <!-- display: contents -->
-                    <p class="contents">
-                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="w-full ">
-        <div class="h-full shadow bg-white flex flex-col border-0">
-            <div class="h-full shadow bg-white flex flex-col border-0">
-                <img
-                    class="card-img-top cards-static-images max-w-full h-auto"
-                    src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                    loading="lazy"
-                    />
-
-                <div class="card-body home-resources-body p-4 h-full">
-                    <h5 class="card-title mb-3">
-                        <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                    </h5>
-
-                    <p class="card-text home-resources-text text-left  h-full">
-                        {{ element_4.card_1_text }}
-                    </p>
-
-                    <!-- display: contents -->
-                    <p class="contents">
-                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="w-full ">
-        <div class="h-full shadow bg-white flex flex-col border-0">
-            <div class="h-full shadow bg-white flex flex-col border-0">
-                <img
-                    class="card-img-top cards-static-images max-w-full h-auto"
-                    src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                    loading="lazy"
-                    />
-
-                <div class="card-body home-resources-body p-4 h-full">
-                    <h5 class="card-title mb-3">
-                        <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                    </h5>
-
-                    <p class="card-text home-resources-text text-left  h-full">
-                        {{ element_4.card_1_text }}
-                    </p>
-
-                    <!-- display: contents -->
-                    <p class="contents">
-                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div >Card 1 </div>
+  <div>Card 2 </div>
+  <div>Card 3 </div>
+  <div>Card 4 </div>
 </div>
-
 
 
 
