--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -187,7 +187,7 @@
     </div>
 </div>
 
-<div class="grid grid-cols-1 sm:grid-cols-4  gap-6">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
   <div >Card 1 </div>
   <div>Card 2 </div>
   <div>Card 3 </div>
