--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -187,11 +187,18 @@
     </div>
 </div>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-  <div >Card 1 </div>
-  <div>Card 2 </div>
-  <div>Card 3 </div>
-  <div>Card 4 </div>
+<div class="w-full flex justify-center cards-container">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+                <div >Card 1 </div>
+                <div>Card 2 </div>
+                <div>Card 3 </div>
+                <div>Card 4 </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
