--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -193,7 +193,7 @@
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -271,7 +271,7 @@
                     </div>
                 </div>
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
