--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -21,11 +21,11 @@
 <div class="w-full flex justify-center bg-white">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="grid grid-cols-6 sm:grid-cols-1 gap-4">
-                <div class="col-span-3 sm:col-span-1">
+            <div class="grid grid-cols-6 sm:grid-cols-1 gap-4 container-w980">
+                <div class="col-span-3 sm:col-span-1 md:col-span-3">
                     {{ element_1.video_url }}
                 </div>
-                <div class="col-span-3 sm:col-span-1">
+                <div class="col-span-3 sm:col-span-1 md:col-span-3 ">
                     <p class="">
                         {{ element_1.text }}
                     </p>
@@ -46,7 +46,7 @@
 
     <div class="grid grid-cols-6 gap-4">     
 
-        <div class="col-span-4 col-start-2">
+        <div class="col-span-4 col-start-2 container-w980">
             <div class="w-full ">           
 
                 <div class="accordion-static ">
@@ -189,7 +189,7 @@
 
 <div class="w-full flex justify-center cards-container">
     <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
+        <div class="col-span-4 col-start-2 container-w980">
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
                 <div class="">
