--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -46,84 +46,88 @@
 
     <div class="grid grid-cols-6 gap-4">     
 
-        <div class="col-span-4 col-start-2 container-w980">
-            <div class="w-full ">           
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container mission-container">
+                    <div class="grid grid-cols-12 gap-y-8">      
 
-                <div class="accordion-static ">
-                    <!-- Item 1 -->
-                    <details name="acc" class="group">
-                        <summary
-                            class="flex items-center justify-between cursor-pointer p-4 select-none
-                            transition-colors open:bg-blue-50 open:text-blue-700
-                            [&::-webkit-details-marker]:hidden">
-                            <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
-                            <!-- chevron -->
-                            <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                            </svg>
-                        </summary>
-                        <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                            <div class="p-4 pt-0 text-sm accordion-static-body">
-                                {{ element_2.accordion_1_body }}
-                            </div>
-                        </div>
-                    </details>
+                        <div class="accordion-static ">
+                            <!-- Item 1 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
+                                    <!-- chevron -->
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_1_body }}
+                                    </div>
+                                </div>
+                            </details>
 
-                    <!-- Item 2 -->
-                    <details name="acc" class="group">
-                        <summary
-                            class="flex items-center justify-between cursor-pointer p-4 select-none
-                            transition-colors open:bg-blue-50 open:text-blue-700
-                            [&::-webkit-details-marker]:hidden">
-                            <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
-                            <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                            </svg>
-                        </summary>
-                        <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                            <div class="p-4 pt-0 text-sm accordion-static-body">
-                                {{ element_2.accordion_2_body }}
-                            </div>
-                        </div>
-                    </details>
+                            <!-- Item 2 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_2_body }}
+                                    </div>
+                                </div>
+                            </details>
 
-                    <!-- Item 3 -->
-                    <details name="acc" class="group">
-                        <summary
-                            class="flex items-center justify-between cursor-pointer p-4 select-none
-                            transition-colors open:bg-blue-50 open:text-blue-700
-                            [&::-webkit-details-marker]:hidden">
-                            <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
-                            <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                            </svg>
-                        </summary>
-                        <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                            <div class="p-4 pt-0 text-sm accordion-static-body">
-                                {{ element_2.accordion_3_body }}
-                            </div>
-                        </div>
-                    </details>
+                            <!-- Item 3 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_3_body }}
+                                    </div>
+                                </div>
+                            </details>
 
-                    <details name="acc" class="group">
-                        <summary
-                            class="flex items-center justify-between cursor-pointer p-4 select-none
-                            transition-colors open:bg-blue-50 open:text-blue-700
-                            [&::-webkit-details-marker]:hidden">
-                            <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
-                            <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                            </svg>
-                        </summary>
-                        <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                            <div class="p-4 pt-0 text-sm accordion-static-body">
-                                {{ element_2.accordion_4_body }}
-                            </div>
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_4_body }}
+                                    </div>
+                                </div>
+                            </details>
                         </div>
-                    </details>
+                    </div>
+
                 </div>
             </div>
-
         </div>
     </div>
 </div>
