--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -48,9 +48,9 @@
 
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container mission-container">
+                <div class="container-w980">
                     <div class="grid grid-cols-12 gap-y-8">      
-
+                        
                         <div class="accordion-static ">
                             <!-- Item 1 -->
                             <details name="acc" class="group">
