--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -63,7 +63,7 @@
                 <div class="container-w980">
                     <div class="grid grid-cols-12 gap-y-8">
 
-                        <div class="accordion-static ">
+                        <div class="accordion-static col-span-full lg:col-start-2 lg:col-span-10 xl:col-start-3 xl:col-span-8">
                             <!-- Item 1 -->
                             <details name="acc" class="group">
                                 <summary
