--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -59,11 +59,11 @@
     <div class="grid grid-cols-6 gap-4">     
 
         <div class="col-span-4 col-start-2">
-            <div class="w-full ">
+            
                 <div class="container-w980">
                     <div class="grid grid-cols-12 gap-y-8">
 
-                        <div class="accordion-static col-span-full lg:col-start-2 lg:col-span-10 xl:col-start-3 xl:col-span-8">
+                        <div class="accordion-static col-span-full">
                             <!-- Item 1 -->
                             <details name="acc" class="group">
                                 <summary
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            
         </div>
     </div>
 </div>
