--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -63,7 +63,7 @@
                 <div class="container-w980">
                     <div class="grid grid-cols-12 gap-y-8">
 
-                        <div class="accordion-static col-span-full">
+                        <div class="accordion-static ">
                             <!-- Item 1 -->
                             <details name="acc" class="group">
                                 <summary
@@ -143,45 +143,6 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center">
-
-    <div class="grid grid-cols-6 gap-4">     
-
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container mission-container">
-                    <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12">
-                            <div class="accordion-static col-span-full">
-                            <!-- Item 1 -->
-                            <details name="acc" class="group">
-                                <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
-                                    transition-colors open:bg-blue-50 open:text-blue-700
-                                    [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
-                                    <!-- chevron -->
-                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                    </svg>
-                                </summary>
-                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                    <div class="p-4 pt-0 text-sm accordion-static-body">
-                                        {{ element_2.accordion_1_body }}
-                                    </div>
-                                </div>
-                            </details>
-                            </div>
-                        </div>
-
-                      
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
 
 
 
