--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -18,32 +18,22 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center">
-
-    <div class="grid grid-cols-6 gap-4">     
-
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980">
-                    <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12 lg:col-span-6">
-                            <div class="text-center xl:text-left">
-                                {{ element_1.video_url }}
-                            </div>
-                        </div>
-
-                        <div class="col-span-12 lg:col-span-6 text-center">
-                            {{ element_1.text }}
-                        </div>
-                    </div>
-
+            <div class="grid grid-cols-6 gap-4">
+                <div class="col-span-3">
+                    {{ element_1.video_url }}
+                </div>
+                <div class="col-span-3">
+                    <p class="">
+                        {{ element_1.text }}
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
-
 <div class="w-full flex justify-center bg-white">
     <div class="w-full bubble-line-container pt-2">
         <div class="image-wrapper w-full">
@@ -51,12 +41,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-OLD start
-
 
 <div class="w-full flex justify-center">
 
@@ -145,8 +129,6 @@ OLD start
 </div>
 
 
-OLD END
-
 
 
 <!-- ELEMENT 3 - BOX -->
@@ -207,11 +189,11 @@ OLD END
 
 <div class="w-full flex justify-center cards-container">
     <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2 container-w980">
+        <div class="col-span-4 col-start-2">
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -237,7 +219,126 @@ OLD END
                     </div>
                 </div>
                 <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="w-full flex justify-center cards-container">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <!-- inner row -->
+            <div class="flex flex-nowrap gap-6 container-w980">
+                <!-- card 1 -->
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card 2 -->
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -250,7 +351,7 @@ OLD END
                                     <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left  h-full">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_2_text }}
                                 </p>
 
@@ -262,8 +363,10 @@ OLD END
                         </div>
                     </div>
                 </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+
+                <!-- card 3 -->
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -276,7 +379,7 @@ OLD END
                                     <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left  h-full">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_3_text }}
                                 </p>
 
@@ -288,8 +391,10 @@ OLD END
                         </div>
                     </div>
                 </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+
+                <!-- card 4 -->
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
@@ -302,7 +407,7 @@ OLD END
                                     <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left  h-full">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_4_text }}
                                 </p>
 
@@ -318,7 +423,6 @@ OLD END
         </div>
     </div>
 </div>
-
 
 
 
